Add MealList Component. Add Delete method to MealService.

--- a/src/main/frontend/themes/my-theme/styles.css
+++ b/src/main/frontend/themes/my-theme/styles.css
@@ -26,3 +26,7 @@ vaadin-text-field.bordered::part(input-field) {
     }
 }
 
+.meal-card {
+    background-color: var(--lumo-contrast-5pct);
+    box-shadow: var(--lumo-box-shadow-xs);
+}
